<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
              android:orientation="vertical"
              tools:context=".ui.game.AddEditGameFragment">

    <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:autofillHints="@string/title" tools:targetApi="o"/>


    <EditText
            android:id="@+id/edit_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/size_in_gb"
            android:inputType="numberDecimal"
            android:autofillHints="size" tools:targetApi="o"/>


    <EditText
            android:id="@+id/edit_text_desc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/description"
            android:layout_weight="1"
            android:inputType="textMultiLine"
            android:autofillHints="description" tools:targetApi="o"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:id="@+id/button_save_disk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_weight="1"
                tools:ignore="ButtonStyle"/>
        <Button
                android:id="@+id/button_cancel_disk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"
                tools:ignore="ButtonOrder,ButtonStyle"/>
    </LinearLayout>

</LinearLayout>