<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:layout_marginEnd="8dp"
                                   android:layout_marginStart="8dp"
                                   android:layout_marginTop="8dp">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

        <TextView
                android:id="@+id/text_view_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_size"
                android:textStyle="bold"
                android:layout_below="@id/text_view_name"/>

        <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_title"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:ellipsize="end"/>


        <TextView
                android:id="@+id/text_view_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_genre"
                android:ellipsize="end"
                android:layout_below="@id/text_view_size"/>

        <RelativeLayout
                android:id="@+id/progressBar_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_genre"
                android:layout_alignParentEnd="true">

            <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:background="@drawable/circle_shape"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:max="100"
                    android:progress="65"/>

            <TextView
                    android:id="@+id/txtProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/dummy_ratio"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
        </RelativeLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>